<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Score Keeper Baseball</string>
    <string name="home">Home</string>
    <string name="visit">Visitor</string>
    <string name="top">TOP</string>
    <string name="bottom">BOTTOM</string>
    <string name="mRuns">Runs</string>
    <string name="run">Run</string>
    <string name="outs">Outs</string>
    <string name="out">Out</string>
    <string name="slam">Grand Slam</string>
    <string name="initial" translatable="false">0</string>
    <string name="initial_inning" translatable="false">1</string>
    <string name="in">Inning</string>
    <string name="image">Baseball</string>
    <string name="reset">Reset</string>
    <string name="toasthome">Home Team Wins!</string>
    <string name="toastvisitor">Visiting Team Wins!</string>
    <string name="spec">7 Inning Game</string>
</resources>
