<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.scorekeeperbaseball.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            android:fillViewport="true"
            android:scaleType="centerCrop"
            android:src="@drawable/baseball_4" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin2"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/none"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/home"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/team" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/runs"
                    android:textColor="@color/team"
                    android:textSize="@dimen/run_out" />

                <TextView
                    android:id="@+id/runsHome"
                    android:freezesText="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/initial"
                    android:textColor="@color/score"
                    android:textSize="@dimen/nums" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/outs"
                    android:textColor="@color/team"
                    android:textSize="@dimen/run_out" />

                <TextView
                    android:id="@+id/outsHome"
                    android:freezesText="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/initial"
                    android:textColor="@color/team"
                    android:textSize="@dimen/nums2" />

                <Button
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_sides"
                    android:layout_marginRight="@dimen/button_sides"
                    android:layout_marginTop="@dimen/margin"
                    android:onClick="runScoreHome"
                    android:text="@string/run"
                    android:background="@drawable/buttton_shape"
                    android:shadowColor="@color/team"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    />

                <Button
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_sides"
                    android:layout_marginRight="@dimen/button_sides"
                    android:layout_marginTop="@dimen/margin"
                    android:onClick="outsHome"
                    android:text="@string/out"
                    android:background="@drawable/buttton_shape"
                    android:shadowColor="@color/team"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    />

                <Button
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_sides"
                    android:layout_marginRight="@dimen/button_sides"
                    android:layout_marginTop="@dimen/margin"
                    android:onClick="grandSlamHome"
                    android:text="@string/slam"
                    android:background="@drawable/buttton_shape"
                    android:shadowColor="@color/team"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    />

            </LinearLayout>

            <View
                android:layout_width="@dimen/bar"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="@dimen/none"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/visit"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/team" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/runs"
                    android:textColor="@color/team"
                    android:textSize="@dimen/run_out" />

                <TextView
                    android:id="@+id/runsVisitor"
                    android:freezesText="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/initial"
                    android:textColor="@color/score"
                    android:textSize="@dimen/nums" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/outs"
                    android:textColor="@color/team"
                    android:textSize="@dimen/run_out" />

                <TextView
                    android:id="@+id/outsVisitor"
                    android:freezesText="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/initial"
                    android:textColor="@color/team"
                    android:textSize="@dimen/nums2" />

                <Button
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_sides"
                    android:layout_marginRight="@dimen/button_sides"
                    android:layout_marginTop="@dimen/margin"
                    android:onClick="runScoreVisitor"
                    android:text="@string/run"
                    android:background="@drawable/buttton_shape"
                    android:shadowColor="@color/team"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    />

                <Button
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_sides"
                    android:layout_marginRight="@dimen/button_sides"
                    android:layout_marginTop="@dimen/margin"
                    android:onClick="outsVisitor"
                    android:text="@string/out"
                    android:background="@drawable/buttton_shape"
                    android:shadowColor="@color/team"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    />

                <Button
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_sides"
                    android:layout_marginRight="@dimen/button_sides"
                    android:layout_marginTop="@dimen/margin"
                    android:onClick="grandSlamVisitor"
                    android:text="@string/slam"
                    android:background="@drawable/buttton_shape"
                    android:shadowColor="@color/team"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/in"
                android:textColor="@color/team"
                android:textSize="@dimen/run_out" />

            <TextView
                android:id="@+id/inning"
                android:freezesText="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/initial_inning"
                android:textColor="@color/score"
                android:textSize="@dimen/nums2" />

            <Button
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tiny_margin"
                android:onClick="resetAll"
                android:text="@string/reset"
                android:background="@drawable/buttton_shape"
                android:shadowColor="@color/team"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>